Apply new alignment fixes to only inner content

--- a/extras.css
+++ b/extras.css
@@ -30,15 +30,15 @@ p > iframe {
   text-transform: uppercase;
 }
 
-.wolfnet_widget.wolfnet_quickSearch.wolfnet_wWide .wolfnet_quickSearch_form .wolfnet_widgetPrice div select {
+.site-inner .wolfnet_widget.wolfnet_quickSearch.wolfnet_wWide .wolfnet_quickSearch_form .wolfnet_widgetPrice div select {
   margin-left:0 !important;
 }
-.wolfnet_widget.wolfnet_quickSearch.wolfnet_wWide .wolfnet_quickSearch_form .wolfnet_widgetBedBath .wolfnet_widgetBeds select, .wolfnet_widget.wolfnet_quickSearch.wolfnet_wWide .wolfnet_quickSearch_form .wolfnet_widgetBedBath .wolfnet_widgetBaths select {
+.wolfnet_widget.wolfnet_quickSearch.wolfnet_wWide .wolfnet_quickSearch_form .wolfnet_widgetBedBath .wolfnet_widgetBeds select, .site-inner .wolfnet_widget.wolfnet_quickSearch.wolfnet_wWide .wolfnet_quickSearch_form .wolfnet_widgetBedBath .wolfnet_widgetBaths select {
   margin-left:0 !important;
 }
 .wolfnet_widget.wolfnet_quickSearch.wolfnet_wWide .wolfnet_quickSearch_form label {
   display:block !important;
 }
-.wolfnet_widget.wolfnet_quickSearch.wolfnet_wWide .wolfnet_quickSearch_form .wolfnet_widgetBedBath, .wolfnet_widget.wolfnet_quickSearch.wolfnet_wWide .wolfnet_quickSearch_form .wolfnet_widgetPrice {
+.wolfnet_widget.wolfnet_quickSearch.wolfnet_wWide .wolfnet_quickSearch_form .wolfnet_widgetBedBath, .site-inner .wolfnet_widget.wolfnet_quickSearch.wolfnet_wWide .wolfnet_quickSearch_form .wolfnet_widgetPrice {
   text-align:left !important;
 }
